--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -63,8 +63,8 @@
      <widget class="QPushButton" name="StartGame">
       <property name="geometry">
        <rect>
-        <x>870</x>
-        <y>170</y>
+        <x>860</x>
+        <y>150</y>
         <width>301</width>
         <height>171</height>
        </rect>
@@ -98,8 +98,8 @@ QPushButton:hover {
      <widget class="QPushButton" name="Quit">
       <property name="geometry">
        <rect>
-        <x>870</x>
-        <y>400</y>
+        <x>860</x>
+        <y>410</y>
         <width>301</width>
         <height>171</height>
        </rect>
@@ -232,6 +232,41 @@ QPushButton:hover {
        <bool>true</bool>
       </property>
      </widget>
+     <widget class="QPushButton" name="CreditsButton">
+      <property name="geometry">
+       <rect>
+        <x>1050</x>
+        <y>10</y>
+        <width>131</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Lucida Bright</family>
+        <pointsize>10</pointsize>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+	background-color: transparent;
+	border-image: url(:/Images/Buttons/menubutton.png);
+	background-repeat: none;
+	color: white;
+	font: 10pt &quot;Lucida Bright&quot;;
+}
+
+QPushButton:hover {
+	border-image: url(:/Images/Buttons/menu-button-focus.png);
+    font-size: 15px;
+}</string>
+      </property>
+      <property name="text">
+       <string>CREDITS</string>
+      </property>
+     </widget>
      <zorder>Background1_2</zorder>
      <zorder>Background1</zorder>
      <zorder>GameTitle</zorder>
@@ -239,6 +274,7 @@ QPushButton:hover {
      <zorder>Credit</zorder>
      <zorder>Version</zorder>
      <zorder>StartGame</zorder>
+     <zorder>CreditsButton</zorder>
     </widget>
     <widget class="QWidget" name="page_2">
      <widget class="QLabel" name="NameBoard">
@@ -414,7 +450,7 @@ QPushButton:hover {
        <string/>
       </property>
      </widget>
-     <widget class="QTextEdit" name="givePlayerNameBox">
+     <widget class="QLineEdit" name="givePlayerNameBox">
       <property name="geometry">
        <rect>
         <x>330</x>
@@ -428,24 +464,52 @@ QPushButton:hover {
         <pointsize>20</pointsize>
        </font>
       </property>
+      <property name="styleSheet">
+       <string notr="true">text-align:center;</string>
+      </property>
       <property name="inputMethodHints">
-       <set>Qt::InputMethodHint::ImhMultiLine|Qt::InputMethodHint::ImhPreferUppercase</set>
+       <set>Qt::InputMethodHint::ImhPreferUppercase</set>
       </property>
-      <property name="verticalScrollBarPolicy">
-       <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+      <property name="text">
+       <string>DOMINIQUE</string>
       </property>
-      <property name="horizontalScrollBarPolicy">
-       <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
-      <property name="html">
-       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-hr { height: 1px; border-width: 0; }
-li.unchecked::marker { content: &quot;\2610&quot;; }
-li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:20pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;DOMINIQUE&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </widget>
+     <widget class="QPushButton" name="SaveNameButton">
+      <property name="geometry">
+       <rect>
+        <x>690</x>
+        <y>420</y>
+        <width>161</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Lucida Bright</family>
+        <pointsize>12</pointsize>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+	background-color: transparent;
+	border-image: url(:/Images/Buttons/menubutton.png);
+	background-repeat: none;
+	color: white;
+	font: 12pt &quot;Lucida Bright&quot;;
+}
+
+QPushButton:hover {
+	border-image: url(:/Images/Buttons/menu-button-focus.png);
+    font-size: 22px;
+}</string>
+      </property>
+      <property name="text">
+       <string>SAVE</string>
       </property>
      </widget>
      <zorder>Background</zorder>
@@ -455,6 +519,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
      <zorder>PlayerIcon_first</zorder>
      <zorder>BackToMenu</zorder>
      <zorder>givePlayerNameBox</zorder>
+     <zorder>SaveNameButton</zorder>
     </widget>
     <widget class="QWidget" name="page_3">
      <widget class="QLabel" name="Player_Phase1">
@@ -2344,6 +2409,131 @@ QPushButton:hover {
       </property>
       <property name="text">
        <string>GIVE UP</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="page_9">
+     <widget class="QLabel" name="Background_3">
+      <property name="geometry">
+       <rect>
+        <x>-60</x>
+        <y>-70</y>
+        <width>1581</width>
+        <height>781</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:black;</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="CreditsHeader">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>1181</width>
+        <height>171</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>37</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(248, 212, 255)</string>
+      </property>
+      <property name="text">
+       <string>Liberation Battle 21</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Roles">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>160</y>
+        <width>1201</width>
+        <height>171</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>20</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: white;</string>
+      </property>
+      <property name="text">
+       <string>Game Design, Programming, Art, Music and Sounds created by</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="HenrySFriman">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>290</y>
+        <width>1181</width>
+        <height>171</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>37</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(248, 212, 255)</string>
+      </property>
+      <property name="text">
+       <string>Henry S. Friman</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="ReturnFromCredits">
+      <property name="geometry">
+       <rect>
+        <x>920</x>
+        <y>510</y>
+        <width>251</width>
+        <height>111</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Lucida Bright</family>
+        <pointsize>15</pointsize>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+	background-color: transparent;
+	border-image: url(:/Images/Buttons/menubutton.png);
+	background-repeat: none;
+	color: white;
+	font: 15pt &quot;Lucida Bright&quot;;
+}
+
+QPushButton:hover {
+	border-image: url(:/Images/Buttons/menu-button-focus.png);
+    font-size: 25px;
+}</string>
+      </property>
+      <property name="text">
+       <string>RETURN</string>
       </property>
      </widget>
     </widget>
